@@ -1,13 +1,10 @@
+// Tests: Algorithms for strongly connected components
 package algolib.graphs.algorithms;
 
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
+import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import algolib.graphs.DirectedGraph;
@@ -16,19 +13,10 @@ import algolib.tuples.Pair;
 
 public class StronglyConnectedComponentsTest
 {
-    @BeforeEach
-    public void setUp()
-    {
-    }
-
-    @AfterEach
-    public void tearDown()
-    {
-    }
-
     @Test
     public void findSCC()
     {
+        // given
         DirectedGraph digraph = new DirectedSimpleGraph(10,
                                                         Arrays.asList(Pair.of(0, 4), Pair.of(0, 5),
                                                                       Pair.of(1, 0), Pair.of(2, 3),
@@ -38,13 +26,11 @@ public class StronglyConnectedComponentsTest
                                                                       Pair.of(7, 6), Pair.of(8, 3),
                                                                       Pair.of(8, 7),
                                                                       Pair.of(9, 8)));
-
+        // when
         List<Set<Integer>> result = StronglyConnectedComponents.findSCC(digraph);
-
-        Assertions.assertEquals(4, result.size());
-        Assertions.assertTrue(result.contains(Collections.singleton(5)));
-        Assertions.assertTrue(result.contains(Collections.singleton(2)));
-        Assertions.assertTrue(result.contains(new HashSet<>(Arrays.asList(0, 1, 3, 4))));
-        Assertions.assertTrue(result.contains(new HashSet<>(Arrays.asList(6, 7, 8, 9))));
+        // then
+        Assertions.assertThat(result)
+                  .containsExactlyInAnyOrder(Set.of(0, 1, 3, 4), Set.of(2), Set.of(5),
+                                             Set.of(6, 7, 8, 9));
     }
 }
